> Remove "X" button on menu sidebar
> Change close on settings panel from "Close" to "X"
> Fixed click issue on setting icon
> Added "About" section (Not final)

Feb 05, 2026
> Added my YT videos section. This is fetch on my YouTube API

Feb 06, 2026
> Restructure code on show section, fixed entrance animation
> Search video only on their video title
> Improved YT video description readability
> Highlight hashtag text "#", and clickable links on YT and video description
> Replaced "Game Records" to "YT Videos" on header
> Fixed not extend YT description properly on mobile
> Add comma on numbers integer

Feb 07, 2026
> Shown all comments on video especially on counting all the comments and the specific video comments
> Add dropdown [Date, Views, Duration, Comments] with descending and ascending for sorting videos
> Include filter on/off comments on videos
> Added "Videos Found:" that count all the videos in the grid
> Added "Show all videos" button at the bottom to show all the videos and then can minimize videos
> Music added: "Wuthering Waves Login OST"
> Have fade in music volume changes when open and close video modal (Still buggy so I'll fix it soon)
> Fixed comments replies that are not full shown on mobile, I'll fix it soon on author name
> Added idx number of each videos inside the ".yt-vid-thumb" at the top left
> Redesign the subscribe button
> Added subscriber function on yt channel when subscriber click, like "sub_confirmation=1"
> Added bg img from yt cover on yt header description with about 80% darker and 30% opacity

feb 08, 2026
> Added how many likes on total likes and on each videos

To-Do Task:
> Fix on mobile bug on auto out when touch on menu-toggle due to close on outside of the left sidebar
> Fix comment section not hide footer and auto scroll when click chat on jaymantrix AI on script.js

> Fix ".left-nav-item" on text "chat with jaymantrix ai" not highlight
> Can track visitor (same function as chat-section)